--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
 </head>
 
 <body>
-  <header>
-    <ul class="nav">
-      <li class="nav-items title">FREIGHT</li>
-      <li class="nav-items"><a href="/">Visualisation</a></li>
-      <li class="nav-items"><a href="/model">Cost Model</a></li>
-      <li class="nav-items"><a href="/notebook">Notebook</a></li>
-    </ul>
-  </header>
-  <main id="kepler"></main>
-  <script src='bundle.js'></script>
+<div id="#container">
+    <header>
+        <ul class="nav">
+          <li class="nav-items title">FREIGHT</li>
+          <li class="nav-items"><a href="/">Visualisation</a></li>
+          <li class="nav-items"><a href="/model.html">Cost Model</a></li>
+          <li class="nav-items"><a href="/notebook.html">Notebook</a></li>
+        </ul>
+      </header>
+      <main>
+        <div id="kepler"></div>
+      </main>
+</div>
+<script src='bundle.js'></script>
 </body>
 </html>
