Fixed relative links

--- a/model.html
+++ b/model.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='UTF-8' />
 <title>Freight | Visualisation &amp; Modelling Cost</title>
-<link href="../style.css" rel="stylesheet">
+<link href="./style.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/vega@4.0.0-rc.3"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-lite@2.5.2"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-embed@3.15.0"></script> 
@@ -19,9 +19,9 @@
   <header>
     <ul class="nav">
       <li class="nav-items title">FREIGHT</li>
-      <li class="nav-items"><a href="/">Visualisation</a></li>
-      <li class="nav-items"><a href="/model.html">Cost Model</a></li>
-      <li class="nav-items"><a href="/notebook.html">Notebook</a></li>
+      <li class="nav-items"><a href="./">Visualisation</a></li>
+      <li class="nav-items"><a href="./model.html">Cost Model</a></li>
+      <li class="nav-items"><a href="./notebook.html">Notebook</a></li>
     </ul>
   </header>
   <main id="model">
