--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='UTF-8' />
 <title>Freight | Visualisation &amp; Modelling Cost</title>
-<link href="style.css" rel="stylesheet">
+<link href="./style.css" rel="stylesheet">
 
 <link href="https://d1a3f4spazzrp4.cloudfront.net/uber-fonts/4.0.0/superfine.css" rel="stylesheet">
 <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.0/mapbox-gl.css" rel="stylesheet">
@@ -15,9 +15,9 @@
     <header>
         <ul class="nav">
           <li class="nav-items title">FREIGHT</li>
-          <li class="nav-items"><a href="/">Visualisation</a></li>
-          <li class="nav-items"><a href="/model.html">Cost Model</a></li>
-          <li class="nav-items"><a href="/notebook.html">Notebook</a></li>
+          <li class="nav-items"><a href="./">Visualisation</a></li>
+          <li class="nav-items"><a href="./model.html">Cost Model</a></li>
+          <li class="nav-items"><a href="./notebook.html">Notebook</a></li>
         </ul>
       </header>
       <main>
