--- a/notebook.html
+++ b/notebook.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset='UTF-8' />
 <title>Freight | Visualisation &amp; Modelling Cost</title>
-<link href="../style.css" rel="stylesheet"> 
+<link href="./style.css" rel="stylesheet"> 
 </head>
 
 <body>
   <header>
     <ul class="nav">
       <li class="nav-items title">FREIGHT</li>
-      <li class="nav-items"><a href="/">Visualisation</a></li>
-      <li class="nav-items"><a href="/model.html">Cost Model</a></li>
-      <li class="nav-items"><a href="/notebook.html">Notebook</a></li>
+      <li class="nav-items"><a href="./">Visualisation</a></li>
+      <li class="nav-items"><a href="./model.html">Cost Model</a></li>
+      <li class="nav-items"><a href="./notebook.html">Notebook</a></li>
     </ul>
   </header>
   <main id="notebook">
